# openai.rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.fleet/: run.json
.github/workflows/: rust-clippy.yml  rust.yml
examples/: chat.rs  completion.rs  edit.rs  image.rs
src/: args.rs  chat.rs  choice.rs  client.rs  error.rs  lib.rs  models.rs  response.rs  tests.rs  usage.rs
