[package]
name = "openai_gpt_rs"
version = "0.2.1"
edition = "2021"
description = "A wrapper for OpenAI API written in Rust"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
serde_json = "1"
async-trait = "0.1.65"